crates/deadline-cli/tests/snapshots/cli_job_wait__job_wait_failed_exits_2_with_failed_tasks.snap
---
source: crates/deadline-cli/tests/cli_job_wait.rs
info:
  program: deadline
  args:
    - job
    - wait
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61595"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61595"
    AWS_ENDPOINT_URL_STS: "http://localhost:61595"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpWlIv5D/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpWlIv5D
---
success: false
exit_code: 2
----- stdout -----
Job ID: job-aaa
Job completed with status: FAILED
Elapsed time: [TIME] seconds
Found 1 failed tasks:
- stepId: step-001
  taskId: task-001
  stepName: Render Step
  sessionId: session-abc123def45678901234567890abcdef


----- stderr -----
Waiting for job job-aaa to complete...
Job Name: Render Job
