crates/deadline-cli/tests/snapshots/cli_job_wait__job_wait_timeout_exits_1.snap
---
source: crates/deadline-cli/tests/cli_job_wait.rs
info:
  program: deadline
  args:
    - job
    - wait
    - "--timeout"
    - "1"
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61599"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61599"
    AWS_ENDPOINT_URL_STS: "http://localhost:61599"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpOJBjbh/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpOJBjbh
---
success: false
exit_code: 1
----- stdout -----
Job ID: job-aaa
Job Name: Render Job
Error waiting for job completion: Timeout waiting for job job-aaa to complete after 1.5 seconds

----- stderr -----
Waiting for job job-aaa to complete...
Job Name: Render Job
Current status: RUNNING (0/5 tasks succeeded, 5 workers running). [ELAPSED]
